--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
+    "@mui/styled-engine-sc": "^6.1.2",
+    "@mui/x-charts": "^7.19.0",
     "@mui/x-date-pickers": "^7.19.0",
     "dayjs": "^1.11.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.13",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
