--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.13",
