--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^7.19.0",
     "dayjs": "^1.11.13",
     "react": "^18.0.0",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
