--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^7.19.0",
     "@mui/x-date-pickers": "^7.19.0",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "react": "^18.0.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.0.0",
