--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.13",
     "tsparticles-slim": "^2.12.0"
